--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,14 @@
 	<artifactId>commons-logging</artifactId>
 	<version>1.1.3</version>
     </dependency>
+    <dependency>
+	<groupId>commons-lang</groupId>
+	<artifactId>commons-lang</artifactId>
+	<version>2.3</version>
+    </dependency>
   </dependencies>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
